add subtitle, contact form

--- a/templates/base.html
+++ b/templates/base.html
@@ -122,9 +122,11 @@
     <script src="/static/js/bootstrap.min.js"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script src="/static/js/clean-blog.min.js"></script>
+    <script src="/static/js/clean-blog.js"></script>
     <!-- prism code highlight -->
     <script src="/static/js/prim.js"></script>
+    <!-- js cookie for ajax -->
+    <script src="/static/js/js.cookie.js"></script>
 
 </body>
 
