--- a/templates/archives.html
+++ b/templates/archives.html
@@ -18,6 +18,12 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+              <div class="input-group">
+                <input type="text" class="form-control" placeholder="Search for...">
+                <span class="input-group-btn">
+                  <button class="btn btn-default" type="button">Go!</button>
+                </span>
+              </div>
                 {% for post in posts %}
                 <div class="post-preview">
                     <a href="/{{post.id}}/">
