--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
                             {{post.title}}
                         </h2>
                         <h3 class="post-subtitle">
-                            {{post.content|truncatewords:2}}
+                            {{post.content|safe|truncatewords:2}}
                         </h3>
                     </a>
                     <p class="post-meta">Posted by <a href="#">Start Bootstrap</a> on {{post.date_time}}</p>
