--- a/templates/base.html
+++ b/templates/base.html
@@ -85,7 +85,7 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <ul class="list-inline text-center">
                         <li>
-                            <a href="http://twitter.com/mactanxin/">
+                            <a href="http://twitter.com/mactanxin/" target="_blank">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
@@ -93,7 +93,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="http://facebook.com/mactanxin/">
+                            <a href="http://facebook.com/mactanxin/" target="_blank">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -101,7 +101,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://github.com/mactanxin/">
+                            <a href="https://github.com/mactanxin/" target="_blank">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-github fa-stack-1x fa-inverse"></i>
