changed blog title, added posted time

--- a/templates/post.html
+++ b/templates/post.html
@@ -11,7 +11,7 @@
                     <div class="post-heading">
                         <h1>{{ post.title }}</h1>
                         <h2 class="subheading">{{ post.subtitle }}</h2>
-                        <span class="meta">Posted by <a href="/about/">ME! Of Course</a> on August 24, 2014</span>
+                        <span class="meta">Posted by <a href="/about/">Mactanxin</a> on {{ post.date_time }}</span>
                     </div>
                 </div>
             </div>
