--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>LEETCODE BLOG</title>
+    <title>Mactanxin's BLOG</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
@@ -45,7 +45,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">LeetCode Blog</a>
+                <a class="navbar-brand" href="/">Mactanxin's Blog</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
