added style to index

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,9 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
-                        <h1>LEETCODE BLOG</h1>
+                        <h1>My BLOG</h1>
                         <hr class="small">
-                        <span class="subheading">A Simple Blog Focus on LeetCode Solutions</span>
+                        <span class="subheading">Life is short, use Python</span>
                     </div>
                 </div>
             </div>
@@ -30,22 +30,24 @@
                     </a>
                     <p class="post-meta">Posted by <a href="#">mactanxin</a> on {{post.date_time}}</p>
                 </div>
+                <hr>
                 {% endfor %}
                 <hr>
+                
                 <!-- Pager -->
                 {% if post_list.object_list and post_list.paginator.num_pages > 1 %}
                   <ul class="pager">
-                  {% if post_list.has_previous %}
-                  <li class="next">
-                    <a href="?page={{ post_list.previous_page_number }}">NEWER</a>
-                  </li>
-                  {% endif %}
+                    {% if post_list.has_previous %}
+                    <li class="next">
+                      <a href="?page={{ post_list.previous_page_number }}">NEWER</a>
+                    </li>
+                    {% endif %}
 
-                  {% if post_list.has_next %}
-                  <li class="next">
-                    <a href="?page={{ post_list.next_page_number }}">OLDER</a>
-                  </li>
-                  {% endif %}
+                    {% if post_list.has_next %}
+                    <li class="next">
+                      <a href="?page={{ post_list.next_page_number }}">OLDER</a>
+                    </li>
+                    {% endif %}
                   </ul>
                 {% endif %}
                 
