--- a/templates/base.html
+++ b/templates/base.html
@@ -5,10 +5,12 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">  
+    <meta name="description" content="Mactanxin's Blog, Welcome">
+    <meta name="author" content="mactanxin">
+    <link rel="apple-touch-icon" href="http://mactanxin.com/favicon.ico">
+    <meta name="apple-mobile-web-app-capable" content="yes">  
+    
     <title>Mactanxin's BLOG</title>
 
     <!-- Bootstrap Core CSS -->
@@ -22,7 +24,7 @@
     <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href="/static/css/prim.css" rel="stylesheet">
-    <link rel="shortcut icon" href="/static/favicon.ico" />
+    <link rel="shortcut icon" href="http://mactanxin.com/favicon.ico" />
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
